Support `--add-opens` in addition to `--add-exports` (#1956)
Support `--add-opens` in addition to `--add-exports`